slightly increase size of open menu to avoid gap and scrolling issues

--- a/wp-content/themes/mspflymag/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/mspflymag/assets/scss/modules/_navigation.scss
@@ -50,7 +50,7 @@
   top: $titlebar-height - 2; //set to height of top bar
   height: 100vh;
 	width: 100vw;
-  height: calc(100vh - 52px);
+  height: calc(100vh - 50px);
   background-color: $black;
   transform: translateX(-100%);
   transition: all 400ms ease;
