--- a/wp-content/themes/mspflymag/assets/stylesheets/foundation.css
+++ b/wp-content/themes/mspflymag/assets/stylesheets/foundation.css
@@ -5542,7 +5542,7 @@ meter {
   top: 50px;
   height: 100vh;
   width: 100vw;
-  height: calc(100vh - 52px);
+  height: calc(100vh - 50px);
   background-color: #000000;
   -webkit-transform: translateX(-100%);
       -ms-transform: translateX(-100%);
